--- a/client/public/index.html
+++ b/client/public/index.html
@@ -13,6 +13,7 @@
   <link rel="apple-touch-icon" href="%PUBLIC_URL%/single-page-icon.png">
   <link href="https://fonts.googleapis.com/css?family=Karla" rel="stylesheet">
   <meta name="apple-mobile-web-app-title" content="MYtinerary">
+  <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
   <title>MYtinerary</title>
 </head>
 
